--- a/style/header.css
+++ b/style/header.css
@@ -1,7 +1,7 @@
-.cabeçalho_menu-humburger{
+.cabeçalho_menu-hunburguer{
     width: 24px;
     height: 24px; 
-    background-image: url(../Ing/Menu.svg); 
+    background-image: url(../img/Menu.svg); 
     background-repeat:no-repeat; 
     background-position:center;
     display: inline-block;
@@ -19,6 +19,40 @@
     align-items: center;
 }
 
-.container_imagen{
+.container_imagem{
     padding: 1em;
+}
+
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 1005%;
+    width: 60vw;
+}
+
+.container__botao:checked ~ .lista-menu{
+    display: block;
+}
+
+.lista-menu__titulo
+.lista-menu__item{
+    padding: 1em;
+    background-color: var(--branco);
+}
+
+.lista-menu__titulo{
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.lista-menu__link{
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+}
+
+.container__botao{
+    display: none;
 }
