--- a/style/header.css
+++ b/style/header.css
@@ -1,7 +1,7 @@
-.cabeçalho_menu-hunburguer{
+.cabeçalho_menu-hunburger{  
     width: 24px;
     height: 24px; 
-    background-image: url(../img/Menu.svg); 
+    background-image: url(../Img/Menu.svg); 
     background-repeat:no-repeat; 
     background-position:center;
     display: inline-block;
